SONARIAC-556 Modify HealthcheckInstruction implementation to use Flag, first implementation